--- a/exercicio02.html
+++ b/exercicio02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>adicionando imagem</title>
+    <title>adicionando imagenm da Irlanda</title>
 </head>
 <body>
     <h1>Imagem da Irlanda</h1>
