--- a/exercicio02.html
+++ b/exercicio02.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Imagem da Irlanda</h1>
 
-    <img src="https://www.adobe.com/br/express/feature/image/media_1b10a138bf06d532241d79f6331651b308c9a5209.png?width=2000&format=webply&optimize=medium.png"
+    <img src="https://www.adobe.com/br/express/feature/image/media_1b10a138bf06d532241d79f6331651b308c9a5209.png?width=2000&format=webply&optimize=medium.png">
 </body>
 </html>
